Fix overflow on blank plan

--- a/src/PortfolioPlanning/Components/Plan/PlanSummary.scss
+++ b/src/PortfolioPlanning/Components/Plan/PlanSummary.scss
@@ -4,7 +4,6 @@
 .plan-summary {
     display: flex;
     margin-left: $spacing-32;
-    width: 100%;
 
     .owner {
         display: flex;
